--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="container">
-        <textarea id="inputText" placeholder="ここに入力してください..."></textarea>
-        <div class="output-box" id="outputBox"></div>
+        <textarea id="inputText" placeholder="ここに｜入力《にゅう｜りょく》してください"></textarea>
+        <div class="output-box" id="outputBox" >ここに<ruby>入<rt>にゅう</rt>力<rt>りょく</rt></ruby>してください</div>
         <button class="copy" id="copyButton">コピー</button>
     </div>
 
