--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="container">
-        <textarea id="inputText" placeholder="ここに｜入力《にゅう｜りょく》してください"></textarea>
-        <div class="output-box" id="outputBox" >ここに<ruby>入<rt>にゅう</rt>力<rt>りょく</rt></ruby>してください</div>
+        <textarea id="inputText" placeholder="｜振-り-仮-名《ルビ》を｜入力《にゅう｜りょく》してください"></textarea>
+        <div class="output-box" id="outputBox" ><ruby>振り仮名<rt>ルビ</rt></ruby>を<ruby>入<rt>にゅう</rt>力<rt>りょく</rt></ruby>してください</div>
         <button class="copy" id="copyButton">コピー</button>
     </div>
 
